[project]
name = "middletier"
version = "0.1.0"
description = "Add your description here"
readme = "README.md"
requires-python = ">=3.13.1"
dependencies = [
    "boto3>=1.36.10",
    "fastapi[all]>=0.115.8",
    "pydantic>=2.10.6",
    "python-dotenv>=1.0.1",
    "python-jose[cryptography]>=3.3.0",
    "typing>=3.10.0.0",
    "uvicorn>=0.34.0",
]
